<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about">Info</string>
    <string name="aboutme">Info Aplikasi</string>
    <string name="aboutme_desc">Informasi, Tips &amp; QA tentang aplikasi ini</string>
    <string name="action_add_to_bookmark">Tambah ke Bookmark</string>
    <string name="action_aya">Aksi Popup Ayat</string>
    <string name="action_aya_clicked">Diklik</string>
    <string name="action_aya_longpress">Tahan Lama</string>
    <string name="action_copy">Salin Ayat</string>
    <string name="action_play_murattal">Play Murottal</string>
    <string name="action_set_last_read">Tandai Terakhir Dibaca</string>
    <string name="action_share">Bagikan Ayat</string>
    <string name="activity_title_maps">Ubah Lokasi Manual</string>
    <string name="activity_title_maps_distance">"Jarak ke Ka'bah"</string>
    <string name="activity_title_qibla">Arah Kiblat</string>
    <string name="activity_title_settings">Pengaturan Jadwal Sholat</string>
    <string name="activity_title_thirty">Jadwal 30 Hari Kedepan</string>
    <string name="adjust_hijri_cal_current">Menggunakan dari hasil standar</string>
    <string name="adjust_hijri_cal_current_min">Kurangi %1$s hari dari standar</string>
    <string name="adjust_hijri_cal_current_plus">Tambah %1$d hari dari standar</string>
    <string name="adjust_hijri_cal_title">Penyesuaian Tanggal Hijriah</string>
    <string name="adjust_manual_ashar_desc">Sesuaikan personal waktu sholat ashar</string>
    <string name="adjust_manual_desc">Tambah atau kurangi waktu sholat dari standarnya</string>
    <string name="adjust_manual_dzuhur_desc">Sesuaikan personal waktu sholat dzuhur</string>
    <string name="adjust_manual_imsak_desc">Sesuaikan personal waktu imsak</string>
    <string name="adjust_manual_isya_desc">Sesuaikan personal waktu sholat isya</string>
    <string name="adjust_manual_maghrib_desc">Sesuaikan personal waktu sholat maghrib</string>
    <string name="adjust_manual_subuh_desc">Sesuaikan personal waktu sholat subuh</string>
    <string name="adjust_manual_terbit_desc">Sesuaikan personal waktu terbit</string>
    <string name="adjust_manual_title">Menyesuaikan Personal</string>
    <string name="app_name">"Al-Qur'an Indonesia"</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arabic_font_size">Ukuran Font Arabic</string>
    <string name="arabic_indopak">IndoPak (Asia)</string>
    <string name="arabic_type_style">Jenis Penulisan Arabic</string>
    <string name="arabic_utsmani">Utsmani (Madinah)</string>
    <string name="ashar">Ashar</string>
    <string name="audio_manager">Audio Manager</string>
    <string name="audio_manager_desc">Download dan hapus multi select audio murottal</string>
    <string name="audio_murottal">Audio Murottal</string>
    <string name="button_last_read">Terakhir Baca</string>
    <string name="button_pencarian">Pencarian</string>
    <string name="button_prayer_times">Jadwal Sholat</string>
    <string name="button_read_quran">"Baca Qur'an"</string>
    <string name="button_setting">Pengaturan</string>
    <string name="checkupdate">Cek Pembaruan</string>
    <string name="checkupdate_desc">Mengecek pembaruan aplikasi dan konten</string>
    <string name="disable_jumat_desc">"Disable notifikasi Dzuhur di hari Jum'at"</string>
    <string name="disable_jumat_title">"Disable Dzuhur Hari Jum'at"</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="folder_path">Lokasi Audio Murottal</string>
    <string name="folder_path_desc">/sdcard</string>
    <string name="force_notif_lollipop_desc">Untuk device terbaru yang mempunyai fitur Smart Manager (baca menu Informasi di bawah ini bagian Tips dan QA)</string>
    <string name="force_notif_lollipop_title">Force (Memaksa) Notifikasi</string>
    <string name="full_screen">Layar Penuh</string>
    <string name="full_screen_desc">Aktifkan layar penuh (tanpa notifbar)</string>
    <string name="general">Lainnya</string>
    <string name="high_latitude_desc">Metode Untuk Menyesuaikan Lintang</string>
    <string name="high_latitude_title">Menyesuaikan Lintang</string>
    <string name="imsak">Imsak</string>
    <string name="infaq">Donasi</string>
    <string name="infaq_desc">Akan menghilangkan Iklan</string>
    <string name="info">Informasi</string>
    <string name="info_app_prayer_times_desc">Informasi, tips dan QA jadwal sholat</string>
    <string name="info_app_prayer_times_title">Informasi Jadwal Sholat</string>
    <string name="information">Informasi</string>
    <string name="isya">Isya</string>
    <string name="juristic_method_desc">Metode Untuk Menghitung Waktu Sholat Ashar</string>
    <string name="juristic_method_title">Metode Yuristik (Madzab)</string>
    <string name="keep_screen_on">Biarkan Layar Menyala</string>
    <string name="keep_screen_on_desc">"Biarkan layar tetap menyala ketika membaca Al-Qur'an"</string>
    <string name="latin_font_size">Ukuran Font Latin</string>
    <string name="latin_type">Tipe Latin</string>
    <string name="maghrib">Maghrib</string>
    <string name="other_app">Aplikasi Lain</string>
    <string name="other_app_desc">Install aplikasi lainnya dari Andi Unpam</string>
    <string name="prayer_times_general">Lainnya</string>
    <string name="qori_selected">Qori Murottal</string>
    <string name="rate_app">Beri Rating</string>
    <string name="rate_app_desc">Berikan rating aplikasi ini di Google Play</string>
    <string name="share_app">Bagikan</string>
    <string name="share_app_desc">"Beritahu teman tentang Al-Qur'an ini"</string>
    <string name="show_latin">Aktifkan Latin</string>
    <string name="show_latin_desc">"Perlihatkan latin (translitesi) Qur'an"</string>
    <string name="show_no_ayat_arabic_desc">Perlihatkan nomor ayat arabic di ayat</string>
    <string name="show_no_ayat_arabic_title">Nomor Ayat Arabic</string>
    <string name="show_translation">Aktifkan Terjemahan</string>
    <string name="show_translation_desc">"Perlihatkan terjemahan Qur'an Bahasa Indonesia"</string>
    <string name="subuh">Subuh</string>
    <string name="sunrise">Terbit</string>
    <string name="theme_selected">"Tema Baca Qur'an"</string>
    <string name="time_format_desc">Format Untuk Waktu Sholat</string>
    <string name="time_format_title">Format Waktu</string>
    <string name="title_arabic">Arabic</string>
    <string name="title_latin">Latin (Transliterasi)</string>
    <string name="title_translation">Terjemahan</string>
    <string name="translation_font_size">Ukuran Font Terjemahan</string>
    <string name="translation_type">Penerjemah</string>
    <string name="type_calc">Metode Perhitungan</string>
    <string name="type_calc_desc">Metode Untuk Menghitung Waktu Sholat</string>
    <string name="type_calc_title">Metode Perhitungan Sholat</string>
    <string name="volume_adzan_title">Volume Adzan</string>
    <string name="word_by_word">Kata Demi Kata</string>
    <string name="word_by_word_desc">Aktifkan terjemahan perkata Bahasa Indonesia</string>
</resources>