<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="1" android:id="@id/RootView" android:background="@color/bgHome" android:layout_width="-1" android:layout_height="-1">
    <ImageView android:layout_width="-1" android:layout_height="-1" android:src="@drawable/bg_home" android:scaleType="6" />
    <ImageView android:id="@id/imageAlQuranKarim" android:background="@drawable/ic_quranalkarim" android:layout_width="@dimen/quran_home_width" android:layout_height="@dimen/quran_home_height" android:layout_marginBottom="10dp" android:layout_above="@id/buttonArea" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/buttonArea" android:layout_width="-2" android:layout_height="-2" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <Button android:textSize="@dimen/button_home_font_size" android:textStyle="1" android:textColor="@drawable/bg_button_home_color" android:id="@id/buttonIndexBacaQuran" android:background="@drawable/bg_button_home" android:layout_width="@dimen/button_home_width" android:layout_height="@dimen/button_home_height" android:layout_marginBottom="@dimen/button_home_margin" android:text="@string/button_read_quran" android:layout_centerHorizontal="true" />
        <Button android:textSize="@dimen/button_home_font_size" android:textStyle="1" android:textColor="@drawable/bg_button_home_color" android:id="@id/buttonIndexLastRead" android:background="@drawable/bg_button_home" android:layout_width="@dimen/button_home_width" android:layout_height="@dimen/button_home_height" android:layout_marginTop="@dimen/button_home_margin" android:layout_marginBottom="@dimen/button_home_margin" android:text="@string/button_last_read" android:layout_below="@id/buttonIndexBacaQuran" android:layout_centerHorizontal="true" />
        <Button android:textSize="@dimen/button_home_font_size" android:textStyle="1" android:textColor="@drawable/bg_button_home_color" android:id="@id/buttonIndexPencarian" android:background="@drawable/bg_button_home" android:layout_width="@dimen/button_home_width" android:layout_height="@dimen/button_home_height" android:layout_marginTop="@dimen/button_home_margin" android:layout_marginBottom="@dimen/button_home_margin" android:text="@string/button_pencarian" android:layout_below="@id/buttonIndexLastRead" android:layout_centerHorizontal="true" />
        <Button android:textSize="@dimen/button_home_font_size" android:textStyle="1" android:textColor="@drawable/bg_button_home_color" android:id="@id/buttonIndexJadwalSholat" android:background="@drawable/bg_button_home" android:layout_width="@dimen/button_home_width" android:layout_height="@dimen/button_home_height" android:layout_marginTop="@dimen/button_home_margin" android:layout_marginBottom="@dimen/button_home_margin" android:text="@string/button_prayer_times" android:layout_below="@id/buttonIndexPencarian" android:layout_centerHorizontal="true" />
        <Button android:textSize="@dimen/button_home_font_size" android:textStyle="1" android:textColor="@drawable/bg_button_home_color" android:id="@id/buttonIndexSetting" android:background="@drawable/bg_button_home" android:layout_width="@dimen/button_home_width" android:layout_height="@dimen/button_home_height" android:layout_marginTop="@dimen/button_home_margin" android:text="@string/button_setting" android:layout_below="@id/buttonIndexJadwalSholat" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="1" android:id="@id/bannerAds" android:visibility="0" android:layout_width="-2" android:layout_height="-2" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>
